--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -3,5 +3,6 @@
   "ar": "AR",
   "home": "بيت",
   "about": "عن",
-  "logo": "متعدد اللغات"
+  "logo": "متعدد اللغات",
+  "homeTitle": "مرحبا يدعم لغة RTL"
 }
