--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -3,5 +3,6 @@
   "ar": "AR",
   "home": "Home",
   "about": "About",
-  "logo": "Multi Language"
+  "logo": "Multi Language",
+  "homeTitle": "Hello RTL Language Supports"
 }
